[gd_scene load_steps=88 format=3 uid="uid://dfu2qmqihqc32"]

[ext_resource type="Script" path="res://topDownRooms/cafeteria.gd" id="1_0lrsg"]
[ext_resource type="Texture2D" uid="uid://bfbdrt3ocetmt" path="res://topDownRooms/Cafeteria.png" id="1_5n8w1"]
[ext_resource type="PackedScene" uid="uid://cukqggd2dkija" path="res://topDownRooms/player.tscn" id="2_wwlqv"]
[ext_resource type="PackedScene" uid="uid://bqw7co45ao351" path="res://topDownRooms/ping_pong_player.tscn" id="6_f2jhi"]
[ext_resource type="PackedScene" uid="uid://cw0mnjri0ilxy" path="res://topDownRooms/bot_3.tscn" id="7_ptany"]
[ext_resource type="PackedScene" uid="uid://4w8rv6fvx0m3" path="res://topDownRooms/bot_4.tscn" id="7_wgsne"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_jpea2"]
a = Vector2(630, 37)
b = Vector2(635, 257)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_fyhx0"]
a = Vector2(643, 361)
b = Vector2(643, 250)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_fnk1h"]
a = Vector2(678, 169)
b = Vector2(677, 191)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_d4urf"]
a = Vector2(630, 37)
b = Vector2(115, 38)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ku1t6"]
a = Vector2(114, 70)
b = Vector2(115, 38)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_vt661"]
a = Vector2(114, 70)
b = Vector2(24, 71)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_uykjy"]
a = Vector2(24, 80)
b = Vector2(24, 71)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_3e7qy"]
a = Vector2(24, 80)
b = Vector2(38, 81)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_msxad"]
a = Vector2(35, 143)
b = Vector2(38, 81)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_xv4uq"]
a = Vector2(35, 143)
b = Vector2(11, 144)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_m3sdj"]
a = Vector2(77, 104)
b = Vector2(15, 155)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_m15uc"]
a = Vector2(77, 104)
b = Vector2(46, 78)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_sjfiy"]
a = Vector2(47, 57)
b = Vector2(46, 78)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_slk5x"]
a = Vector2(47, 57)
b = Vector2(34, 47)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_4t3jf"]
a = Vector2(26, 60)
b = Vector2(34, 47)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_jk5ii"]
a = Vector2(26, 60)
b = Vector2(-3, 34)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_txkcd"]
a = Vector2(-65, 88)
b = Vector2(-3, 34)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_srbau"]
a = Vector2(-65, 88)
b = Vector2(-28, 120)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_0c2qs"]
a = Vector2(-37, 132)
b = Vector2(-28, 120)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_tql0j"]
a = Vector2(-37, 132)
b = Vector2(-26, 144)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_jghhu"]
a = Vector2(-13, 135)
b = Vector2(-26, 144)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_5tx7s"]
a = Vector2(-13, 135)
b = Vector2(13, 154)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_hd21m"]
a = Vector2(9, 582)
b = Vector2(11, 144)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_vkctv"]
a = Vector2(18, 229)
b = Vector2(8, 236)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_14juh"]
a = Vector2(18, 229)
b = Vector2(20, 178)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_l7dxu"]
a = Vector2(3, 160)
b = Vector2(20, 178)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_yin0b"]
a = Vector2(9, 582)
b = Vector2(610, 585)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_u7k1e"]
a = Vector2(609, 575)
b = Vector2(610, 585)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ex47b"]
a = Vector2(609, 575)
b = Vector2(628, 575)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_e65lo"]
a = Vector2(640, 530)
b = Vector2(628, 575)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q3l60"]
size = Vector2(51, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cuakx"]
size = Vector2(112.5, 43.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6cdit"]
size = Vector2(19.25, 76)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8uff0"]
size = Vector2(22, 168)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rjx4c"]
size = Vector2(38, 119)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_28moa"]
size = Vector2(28, 57.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mv4uw"]
size = Vector2(38, 119)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_llq8g"]
size = Vector2(29, 28.875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yhl7b"]
size = Vector2(31.5, 28.875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5srjo"]
size = Vector2(31.5, 27.4375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dltno"]
size = Vector2(38.75, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j4v28"]
size = Vector2(38.75, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3mvrb"]
size = Vector2(21, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j24dd"]
size = Vector2(35.375, 47.4375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ls2ub"]
size = Vector2(35.375, 47.4375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tp47t"]
size = Vector2(122, 52.4375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1fjsw"]
size = Vector2(106, 52.4375)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gvwpt"]
radius = 27.0
height = 54.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xi167"]
radius = 17.0
height = 44.2554

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t6ptg"]
radius = 17.0
height = 44.2554

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_inkhq"]
radius = 17.0
height = 58.8554

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_efgdd"]
radius = 17.0
height = 68.356

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7yboy"]
radius = 25.0
height = 50.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_22u4b"]
radius = 30.0
height = 60.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ysxnu"]
radius = 27.0
height = 58.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3gboc"]
radius = 17.0
height = 102.946

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cifq8"]
radius = 33.4852
height = 78.881

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b6fxn"]
radius = 6.58224
height = 88.8065

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d0cmg"]
radius = 7.94037
height = 39.1792

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_axucu"]
radius = 4.0
height = 39.1792

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w5dh3"]
radius = 4.0
height = 39.1792

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rju0b"]
radius = 5.0
height = 82.0897

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hb37f"]
radius = 5.0
height = 82.0897

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jnb7n"]
radius = 5.0
height = 82.0897

[sub_resource type="RectangleShape2D" id="RectangleShape2D_akoqo"]
size = Vector2(72, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_131tt"]
size = Vector2(57, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pj6nt"]
size = Vector2(24.5, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hic8s"]
size = Vector2(24.5, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cth20"]
size = Vector2(18.25, 33)

[sub_resource type="CircleShape2D" id="CircleShape2D_6svis"]
radius = 16.0312

[sub_resource type="CircleShape2D" id="CircleShape2D_k2ks4"]
radius = 16.0312

[sub_resource type="CircleShape2D" id="CircleShape2D_igewj"]
radius = 15.0333

[sub_resource type="CircleShape2D" id="CircleShape2D_q2k4k"]
radius = 11.1803

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2q4aq"]
size = Vector2(99.25, 43.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wp0bg"]
size = Vector2(29.75, 94)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_av85i"]
bg_color = Color(0.597173, 0.597177, 0.597176, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.00184107, 0.00184107, 0.00184107, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_il5mm"]
font_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u3pmg"]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0142752, 0.0142752, 0.0142752, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30

[sub_resource type="LabelSettings" id="LabelSettings_2iqph"]
font_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_awplo"]
bg_color = Color(0.597173, 0.597177, 0.597176, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.00184107, 0.00184107, 0.00184107, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_rjdey"]
font_size = 8

[node name="Cafeteria" type="Node2D"]
position = Vector2(1167, 39)
script = ExtResource("1_0lrsg")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(324, 316.5)
scale = Vector2(0.369141, 0.375488)
texture = ExtResource("1_5n8w1")

[node name="Player" parent="." instance=ExtResource("2_wwlqv")]
position = Vector2(-140, 58)
scale = Vector2(1.5, 1.5)

[node name="AnimatedSprite2D" parent="Player" index="0"]
position = Vector2(488.667, 162)
animation = &"left"

[node name="CollisionShape2D" parent="Player" index="1"]
position = Vector2(488, 180)

[node name="CafeteriaCamera" type="Camera2D" parent="Player"]
position = Vector2(250, 168.667)
scale = Vector2(0.666667, 0.666667)
zoom = Vector2(1.6, 1.6)
limit_left = 1175
limit_top = 50
limit_right = 1810
limit_bottom = 675
limit_smoothed = true
position_smoothing_enabled = true

[node name="Boundaries" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(2, 15)
shape = SubResource("SegmentShape2D_jpea2")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(2, 15)
shape = SubResource("SegmentShape2D_fyhx0")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(-37, 201)
shape = SubResource("SegmentShape2D_fnk1h")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(2, 15)
shape = SubResource("SegmentShape2D_d4urf")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(2, 15)
shape = SubResource("SegmentShape2D_ku1t6")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(2, 15)
shape = SubResource("SegmentShape2D_vt661")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(2, 15)
shape = SubResource("SegmentShape2D_uykjy")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(2, 15)
shape = SubResource("SegmentShape2D_3e7qy")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(2, 15)
shape = SubResource("SegmentShape2D_msxad")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(2, 15)
shape = SubResource("SegmentShape2D_xv4uq")

[node name="CollisionShape2D59" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(100, 141)
shape = SubResource("SegmentShape2D_m3sdj")

[node name="CollisionShape2D60" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(100, 141)
shape = SubResource("SegmentShape2D_m15uc")

[node name="CollisionShape2D61" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(100, 141)
shape = SubResource("SegmentShape2D_sjfiy")

[node name="CollisionShape2D62" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(100, 141)
shape = SubResource("SegmentShape2D_slk5x")

[node name="CollisionShape2D63" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(100, 141)
shape = SubResource("SegmentShape2D_4t3jf")

[node name="CollisionShape2D64" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(100, 141)
shape = SubResource("SegmentShape2D_jk5ii")

[node name="CollisionShape2D65" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(100, 141)
shape = SubResource("SegmentShape2D_txkcd")

[node name="CollisionShape2D66" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(100, 141)
shape = SubResource("SegmentShape2D_srbau")

[node name="CollisionShape2D67" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(100, 141)
shape = SubResource("SegmentShape2D_0c2qs")

[node name="CollisionShape2D68" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(100, 141)
shape = SubResource("SegmentShape2D_tql0j")

[node name="CollisionShape2D69" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(100, 141)
shape = SubResource("SegmentShape2D_jghhu")

[node name="CollisionShape2D70" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(100, 141)
shape = SubResource("SegmentShape2D_5tx7s")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(2, 15)
shape = SubResource("SegmentShape2D_hd21m")

[node name="CollisionShape2D17" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(2, 15)
shape = SubResource("SegmentShape2D_vkctv")

[node name="CollisionShape2D18" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(2, 15)
shape = SubResource("SegmentShape2D_14juh")

[node name="CollisionShape2D19" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(2, 15)
shape = SubResource("SegmentShape2D_l7dxu")

[node name="CollisionShape2D16" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(2, 15)
shape = SubResource("SegmentShape2D_yin0b")

[node name="CollisionShape2D21" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(2, 15)
shape = SubResource("SegmentShape2D_u7k1e")

[node name="CollisionShape2D22" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(2, 15)
shape = SubResource("SegmentShape2D_ex47b")

[node name="CollisionShape2D23" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(2, 15)
shape = SubResource("SegmentShape2D_e65lo")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(367.5, 61.5)
shape = SubResource("RectangleShape2D_q3l60")

[node name="CollisionShape2D14" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(488.75, 59.25)
shape = SubResource("RectangleShape2D_cuakx")

[node name="CollisionShape2D33" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(631.625, 137)
shape = SubResource("RectangleShape2D_6cdit")

[node name="CollisionShape2D20" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(631, 465)
shape = SubResource("RectangleShape2D_8uff0")

[node name="CollisionShape2D39" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(415, 420.5)
shape = SubResource("RectangleShape2D_rjx4c")

[node name="CollisionShape2D75" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(406, 245)
rotation = -0.122173
shape = SubResource("RectangleShape2D_28moa")

[node name="CollisionShape2D49" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(255, 420)
shape = SubResource("RectangleShape2D_mv4uw")

[node name="CollisionShape2D40" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(376.5, 422.562)
shape = SubResource("RectangleShape2D_llq8g")

[node name="CollisionShape2D43" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(534.75, 422)
shape = SubResource("RectangleShape2D_yhl7b")

[node name="CollisionShape2D52" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(130, 422.719)
shape = SubResource("RectangleShape2D_5srjo")

[node name="CollisionShape2D44" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(480.625, 383)
shape = SubResource("RectangleShape2D_dltno")

[node name="CollisionShape2D50" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(177, 384)
shape = SubResource("RectangleShape2D_j4v28")

[node name="CollisionShape2D54" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(217.5, 397)
shape = SubResource("RectangleShape2D_3mvrb")

[node name="CollisionShape2D45" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(495, 453)
shape = SubResource("RectangleShape2D_j24dd")

[node name="CollisionShape2D51" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(184, 455)
shape = SubResource("RectangleShape2D_ls2ub")

[node name="CollisionShape2D41" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(452, 426.781)
shape = SubResource("RectangleShape2D_tp47t")

[node name="CollisionShape2D48" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(215, 426)
shape = SubResource("RectangleShape2D_1fjsw")

[node name="CollisionShape2D34" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(556, 252)
shape = SubResource("CapsuleShape2D_gvwpt")

[node name="CollisionShape2D55" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(250, 242)
rotation = 1.22173
shape = SubResource("CapsuleShape2D_xi167")

[node name="CollisionShape2D58" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(257, 270)
rotation = 1.22173
shape = SubResource("CapsuleShape2D_t6ptg")

[node name="CollisionShape2D56" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(269, 257)
rotation = 0.174533
shape = SubResource("CapsuleShape2D_inkhq")

[node name="CollisionShape2D71" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(435, 263)
rotation = 0.174533
shape = SubResource("CapsuleShape2D_efgdd")

[node name="CollisionShape2D42" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(504, 425)
shape = SubResource("CapsuleShape2D_7yboy")

[node name="CollisionShape2D46" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(171, 426)
shape = SubResource("CapsuleShape2D_22u4b")

[node name="CollisionShape2D47" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(261, 428)
shape = SubResource("CapsuleShape2D_ysxnu")

[node name="CollisionShape2D35" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(524, 267)
rotation = -0.122173
shape = SubResource("CapsuleShape2D_3gboc")

[node name="CollisionShape2D74" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(392, 272)
rotation = -0.122173
shape = SubResource("CapsuleShape2D_cifq8")

[node name="CollisionShape2D73" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(353, 277)
rotation = -0.15708
shape = SubResource("CapsuleShape2D_b6fxn")

[node name="CollisionShape2D36" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(508, 268)
shape = SubResource("CapsuleShape2D_d0cmg")

[node name="CollisionShape2D57" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(278, 274)
shape = SubResource("CapsuleShape2D_axucu")

[node name="CollisionShape2D72" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(448, 289)
shape = SubResource("CapsuleShape2D_w5dh3")

[node name="CollisionShape2D37" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(361, 410)
rotation = -0.0349066
shape = SubResource("CapsuleShape2D_rju0b")

[node name="CollisionShape2D38" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(556, 411)
shape = SubResource("CapsuleShape2D_hb37f")

[node name="CollisionShape2D53" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(112, 412)
shape = SubResource("CapsuleShape2D_jnb7n")

[node name="CollisionShape2D26" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(455, 591)
shape = SubResource("RectangleShape2D_akoqo")

[node name="CollisionShape2D27" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(246.5, 598)
shape = SubResource("RectangleShape2D_131tt")

[node name="CollisionShape2D28" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(19.75, 438)
shape = SubResource("RectangleShape2D_pj6nt")

[node name="CollisionShape2D31" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(16, 531.5)
shape = SubResource("RectangleShape2D_hic8s")

[node name="CollisionShape2D32" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(13.125, 493)
shape = SubResource("RectangleShape2D_cth20")

[node name="CollisionShape2D24" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(107, 583)
shape = SubResource("CircleShape2D_6svis")

[node name="CollisionShape2D30" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(22, 585)
shape = SubResource("CircleShape2D_k2ks4")

[node name="CollisionShape2D29" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(27, 431)
shape = SubResource("CircleShape2D_igewj")

[node name="CollisionShape2D25" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(391, 589)
shape = SubResource("CircleShape2D_q2k4k")

[node name="CollisionShape2D15" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(192.625, 61)
shape = SubResource("RectangleShape2D_2q4aq")

[node name="Exit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2(656, 323)
shape = SubResource("RectangleShape2D_wp0bg")

[node name="Bot_3" parent="." instance=ExtResource("7_ptany")]
position = Vector2(-409, -119)
scale = Vector2(1.5, 1.5)

[node name="BotPanel" type="Panel" parent="Bot_3"]
visible = false
offset_left = 456.0
offset_top = 88.0
offset_right = 548.0
offset_bottom = 126.0
theme_override_styles/panel = SubResource("StyleBoxFlat_av85i")

[node name="BotSpeechBubble" type="Label" parent="Bot_3/BotPanel"]
visible = false
layout_mode = 0
offset_left = 3.55556
offset_top = 6.22222
offset_right = 92.5556
offset_bottom = 57.2222
text = "Give me your 
lunch money!!"
label_settings = SubResource("LabelSettings_il5mm")
horizontal_alignment = 1

[node name="PingPongPlayer" parent="." instance=ExtResource("6_f2jhi")]
position = Vector2(-677, 70)
scale = Vector2(1.5, 1.5)

[node name="PingPongPanel" type="Panel" parent="."]
visible = false
z_index = 5
offset_left = 91.0
offset_top = 203.0
offset_right = 298.0
offset_bottom = 268.0
theme_override_styles/panel = SubResource("StyleBoxFlat_u3pmg")

[node name="PingPongSpeechBubble" type="Label" parent="PingPongPanel"]
visible = false
z_index = 5
layout_mode = 0
offset_left = 28.0
offset_top = 17.0
offset_right = 307.0
offset_bottom = 106.0
text = "I challenge you to ping pong 
press p to play!
      "
label_settings = SubResource("LabelSettings_2iqph")

[node name="Bot_4" parent="." instance=ExtResource("7_wgsne")]
position = Vector2(-383, 237)
scale = Vector2(1.6, 1.6)

[node name="BotPanel" type="Panel" parent="Bot_4"]
visible = false
offset_left = 456.0
offset_top = 88.0
offset_right = 548.0
offset_bottom = 126.0
theme_override_styles/panel = SubResource("StyleBoxFlat_awplo")

[node name="BotSpeechBubble" type="Label" parent="Bot_4/BotPanel"]
visible = false
layout_mode = 0
offset_left = 2.66667
offset_top = 5.99999
offset_right = 92.6667
offset_bottom = 57.0
text = "Whats for 
lunch today?
"
label_settings = SubResource("LabelSettings_rjdey")
horizontal_alignment = 1

[connection signal="body_entered" from="Exit" to="." method="_on_exit_body_entered"]
[connection signal="body_entered" from="Bot_3/Bot3Area" to="." method="_on_bot_3_area_body_entered"]
[connection signal="body_exited" from="Bot_3/Bot3Area" to="." method="_on_bot_3_area_body_exited"]
[connection signal="body_entered" from="PingPongPlayer/SpeechArea" to="." method="_on_speech_area_body_entered"]
[connection signal="body_exited" from="PingPongPlayer/SpeechArea" to="." method="_on_speech_area_body_exited"]
[connection signal="body_entered" from="Bot_4/Bot4Area" to="." method="_on_bot_4_area_body_entered"]
[connection signal="body_exited" from="Bot_4/Bot4Area" to="." method="_on_bot_4_area_body_exited"]

[editable path="Player"]
[editable path="Bot_3"]
[editable path="PingPongPlayer"]
[editable path="Bot_4"]
